# tyuiu-fastapi-classifier

./: Dockerfile  main.py  pyproject.toml  requirements.txt
models/transformers/: binary-imputer-new.dill  one-hot-encoder-new.pkl  standard-scaler-new.pkl
pipes/: binary-imputer.dill  binary-imputer.pkl  one-hot-encoder.pkl  standard-scaler.pkl
src/: config.py  utils.py
src/api_v1/routers/: classifier.py
src/api_v1/schemas/: applicant.py
src/app/: application.py
src/app/routers/: classifier.py
src/app/schemas/: response.py  user.py
src/ml/: pipeline.py  utils.py
src/ml/models/: classifier.py  one_hot_encoder.py
src/ml/pipeline/: __init__.py  classifier.py
src/ml/pipes/: binary.py  classifier.py  imputer.py  labels.py  model.py  ohe.py  scaler.py
src/ml/transformers/: labels.py
src/model/: pipeline.py
src/model/transformers/: classifier.py  imputer.py  ohe.py  scaler.py
trained_models/: label-encoder.joblib  one-hot-encoder.joblib  standard-scaler.joblib
